# Sogas

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: format.yml  main.yml  win-build.yml
sandbox/: CMakeLists.txt
sandbox/data/: components.json  gamestates.json  scene.json
sandbox/data/materials/: default.mat
sandbox/src/: main.cpp
sogasengine/: CMakeLists.txt
sogasengine/data/: boot.json  modules.json
sogasengine/internal/render/: buffer.h  render_device.h  render_manager.h  render_types.h
sogasengine/internal/render/vulkan/: vulkan_attachment.h  vulkan_buffer.h  vulkan_commandbuffer.h  vulkan_descriptorSet.h  vulkan_device.h  vulkan_pipeline.h  vulkan_renderpass.h  vulkan_shader.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_types.h  vulkan_vertex_declaration.h
sogasengine/internal/resources/: camera.h  material.h  mesh.h  primitives.h  resource.h  texture.h
sogasengine/logger/: CMakeLists.txt
sogasengine/logger/private/: logger.cpp
sogasengine/logger/public/: logger.h
sogasengine/private/: application.cpp  boot.json  engine.cpp  logger.cpp  math_utils.cpp  modules.json  read_json.cpp  sgs_memory.cpp  sgs_pch.h
sogasengine/private/components/: base_component.h  camera_component.cpp  camera_component.h  camera_controller_component.cpp  camera_controller_component.h  light_point_component.cpp  light_point_component.h  name_component.cpp  name_component.h  render_component.cpp  render_component.h  transform_component.cpp  transform_component.h
sogasengine/private/entity/: entity.cpp  entity.h
sogasengine/private/handle/: handle.h  handle_definition.cpp  handle_definition.h  handle_manager.cpp  handle_manager.h  object_manager.h
sogasengine/private/modules/: module_boot.cpp  module_boot.h  module_entities.cpp  module_entities.h  module_input.h  module_manager.cpp
sogasengine/private/render/: buffer.cpp  buffer.h  module_render.cpp  render_device.cpp  render_device.h  render_manager.cpp  render_manager.h  render_types.h
sogasengine/private/render/pipelines/: forward_pipeline.cpp
sogasengine/private/render/vulkan/: render.cpp  render.h  vulkan_attachment.cpp  vulkan_buffer.cpp  vulkan_descriptorSet.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_types.h  vulkan_vertex_declaration.cpp  vulkan_vertex_declaration.h
sogasengine/private/resources/: camera.cpp  camera.h  material.cpp  mesh.cpp  mesh.h  mesh_resource.cpp  primitives.cpp  resource.cpp  resource.h  texture_resource.cpp
sogasengine/private/shaders/: forward.frag  forward.vert  quad.frag  quad.vert  test.frag  test.vert
sogasengine/public/: application.h  defines.h  engine.h  entry.h  logger.h  math_utils.h  pch.h  read_json.h  sgs_memory.h
sogasengine/public/modules/: module.h  module_manager.h
sogasengine/public/render/: module_render.h  render_command.h
sogasengine/public/render/pipelines/: forward_pipeline.h
sogasengine/renderer/: CMakeLists.txt
sogasengine/renderer/internal/: defines.h  device_renderpass.h  device_resource_pool.h  device_swapchain.h  device_texture.h  pch.h
sogasengine/renderer/internal/vulkan/: vulkan_attachment.h  vulkan_buffer.h  vulkan_commandbuffer.h  vulkan_descriptorSet.h  vulkan_device.h  vulkan_pipeline.h  vulkan_renderpass.h  vulkan_sampler.h  vulkan_shader.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_types.h  vulkan_vertex_declaration.h
sogasengine/renderer/private/: buffer.cpp  device_resource_pool.cpp  render_device.cpp  render_types.cpp  renderpass.cpp  swapchain.cpp  texture.cpp
sogasengine/renderer/private/vulkan/: vulkan_attachment.cpp  vulkan_buffer.cpp  vulkan_commandbuffer.cpp  vulkan_descriptorSet.cpp  vulkan_device.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_sampler.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_vertex_declaration.cpp
sogasengine/renderer/public/: attachment.h  buffer.h  commandbuffer.h  device_buffer.h  device_resources.h  render_device.h  render_types.h  renderpass.h  swapchain.h  texture.h
